force-app/main/default/objects/WorkOrder/WorkOrder.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>