force-app/main/default/objects/WorkOrder/fields/Payment_Link_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_ID__c</fullName>
    <label>Payment Link ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>