force-app/main/default/objects/WorkOrder/fields/Stripe_Webhook_Resp__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Webhook_Resp__c</fullName>
    <label>Stripe Webhook Resp</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>