force-app/main/default/objects/WorkOrder/fields/Work_Order_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Ref_No__c</fullName>
    <displayFormat>WO-{00000}</displayFormat>
    <label>Work Order Ref No</label>
    <type>AutoNumber</type>
</CustomField>